--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Peep</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" href="/public/favicon.ico" />
   </head>
   <body>
-    <div id="__PEEP__">    
+    <div id="__PEEP__">
       <span> PEEP PEEP DON'T SLEEP ... </span>
     </div>
     <script src="/build/bundle.js"></script>
